[tool.poetry]
name = "sleepy"
version = "0.1.0"
description = ""
authors = ["Ha Tran Viet <ha.tran@paradox.ai>"]

[tool.poetry.dependencies]
python = "^3.10"
slack-sdk = "^3.19.5"
slack-bolt = "^1.16.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sleepy = "sleepy.main:cli"